--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ranjitswain</groupId>
-	<artifactId>LoginWebApp</artifactId>
+	<artifactId>maven-releases</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>LoginWebApp Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+	<url>http://34.121.188.227:8081/repository/maven-releases/</url>
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
